# HYDRA-CORE

./: CHANGES.md  HYDRA7.py  MANIFEST.in  PUBLISHING.md  README.md  example_usage.py  pyproject.toml  setup.py
hydra7/: __init__.py  __main__.py  cli.py  core.py
